--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -355,6 +355,17 @@ body
             padding-left: 412px;
             background: $dark;
 
+            .btn
+            {
+                @extend #NO-BORDER;
+                font-size: 11px;
+                color: $light;
+            }
+
+            .btn-success { background: $success; }
+            .btn-danger { background: $danger; }
+            .btn-default { background: $purple; }
+
             .row
             {
                 @extend #NO-MARGIN;
@@ -447,17 +458,6 @@ body
                         .btn-small, .toggle-action
                         { @extend #HIDE; }
                     }
-
-                    .btn
-                    {
-                        @extend #NO-BORDER;
-                        font-size: 11px;
-                        color: $light;
-                    }
-
-                    .btn-success { background: $success; }
-                    .btn-danger { background: $danger; }
-                    .btn-default { background: $purple; }
 
                     .list-info
                     {
@@ -883,7 +883,7 @@ body
                     {
                         @extend #ABSOLUTE, #NO-BORDER;
                         right: 0;   top: 0;
-                        margin-top: 13px;
+                        margin-top: 18px;
                         background: transparent;
 
                         i { color: $purple; }
@@ -928,6 +928,21 @@ body
                             i.favorite
                             { color: $yellow; }
                         }
+
+                        p.danger
+                        { color: $danger }
+
+                        textarea
+                        {
+                            @extend #LEFT;
+                            width: $full-width; min-height: 100px;
+                            border-color: $concrete;
+                            padding: 5px;
+                            font-size: 11px;
+                            color: $purple;
+                        }
+
+                        button { margin-top: 10px; }
 
                         .list-group-contact
                         {
